<resources>
    <string name="app_name">struklearn</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_contoh_penambah">Contoh Penambahan Node</string>
  <string name="lbl_penambahan_node">Penambahan Node</string>
  <string name="msg_heap_sort_meng">Heap Sort: Menggunakan sifat heap untuk mengurutkan elemen dalam array.</string>
  <string name="lbl_sedangkan">, sedangkan </string>
  <string name="lbl_heap">Heap</string>
  <string name="msg_pelajari_langka">Pelajari Langkah demi Langkah</string>
  <string name="msg_algoritma_dan_a">Algoritma dan Analisis Kompleksitas: Tree digunakan dalam berbagai algoritma dan pemecahan masalah kompleks.</string>
  <string name="msg_beberapa_operas">Beberapa operasi dasar pada pohon binari meliputi:</string>
  <string name="msg_adalah_anak_ana"> adalah anak-anak </string>
  <string name="msg_pohon_binari_k">Pohon Binari: Konsep dan Implementasi</string>
  <string name="msg_melanjutkan_tra">Melanjutkan traversal pada anak kanan secara rekursif.</string>
  <string name="msg_operasi_pada_tr">Operasi pada Tree</string>
  <string name="msg_operasi_dasar_p">Operasi Dasar pada Pohon Binari</string>
  <string name="msg_untuk_memahami">Untuk memahami lebih baik, mari lihat contoh visualisasi tree sederhana:</string>
  <string name="msg_traversal_pada">Traversal pada tree adalah proses penelusuran atau visitasi setiap node dalam tree sesuai dengan urutan tertentu. Proses ini penting untuk memproses atau mencari data dalam tree dengan cara yang terstruktur.</string>
  <string name="msg_operasi_penamb">Operasi: Penambahan, Penghapusan, dan Pencarian Node</string>
  <string name="msg_pencarian_cepat">Pencarian Cepat: Karena sifat-sifat BST, pencarian dapat dilakukan secara efisien dengan mengurangi jumlah node yang harus diperiksa.</string>
  <string name="msg_pohon_binari_ad">Pohon binari adalah struktur data tree di mana setiap node memiliki paling banyak dua anak, yang biasanya disebut sebagai anak kiri dan anak kanan. Pada pohon binari, setiap node memiliki hubungan hierarki dengan node di atasnya (parent) dan node-node di bawahnya (anak-anak).</string>
  <string name="msg_cocok_untuk_mer"> Cocok untuk merepresentasikan struktur hierarki seperti struktur file pada sistem operasi.</string>
  <string name="msg_setelah_mengunj">Setelah mengunjungi node, melakukan traversal pada anak kiri, kemudian anak kanan secara rekursif.</string>
  <string name="lbl_implementasi">Implementasi</string>
  <string name="msg_edge_koneksi_a">Edge: Koneksi antara dua node, menunjukkan hubungan hierarki. </string>
  <string name="msg_priority_queue">Priority Queue: Implementasi umum menggunakan heap, di mana elemen dengan nilai tertinggi (pada Max Heap) atau terendah (pada Min Heap) dapat diambil dengan prioritas tertinggi.</string>
  <string name="lbl_node">Node:</string>
  <string name="msg_penjumlahan_kum">Penjumlahan Kumulatif: Untuk mendapatkan penjumlahan kumulatif elemen dari indeks 1 hingga i, kita melakukan penjumlahan elemen Fenwick Tree dari indeks 1 hingga i.</string>
  <string name="msg_kunjungi_node_s">Kunjungi node saat ini.</string>
  <string name="msg_implementasi_po">Implementasi Pohon Binari</string>
  <string name="lbl_a">A</string>
  <string name="msg_mengunjungi_nod">Mengunjungi node saat pertama kali ditemui.</string>
  <string name="lbl_b">B</string>
  <string name="lbl_c">C</string>
  <string name="msg_preorder_traver">Preorder Traversal</string>
  <string name="msg_penjelasan_mel2">"Penjelasan: Melakukan traversal pada anak kiri 'D', lalu anak kanan 'D' yaitu 'E', mengunjungi node 'B', anak kiri dari 'B' yaitu 'C', dan akhirnya mengunjungi node 'A'."</string>
  <string name="lbl_d">D</string>
  <string name="lbl_e">E</string>
  <string name="msg_mengakses_setia">Mengakses Setiap Node: Menjamin bahwa setiap node di dalam tree dikunjungi.</string>
  <string name="msg_node_yang_tidak"> Node yang tidak memiliki anak (node paling bawah).</string>
  <string name="msg_koneksi_antara"> Koneksi antara dua node, menunjukkan hubungan hierarki. </string>
  <string name="msg_membangun_ekspr">Membangun Ekspresi atau Formula: Traversal sering digunakan dalam membangun ekspresi matematika atau formula.</string>
  <string name="msg_tree_traversal">Tree Traversal
Pada N-ary Tree</string>
  <string name="msg_karena_6_lebih">Karena 6 lebih kecil dari 8, pencarian dilanjutkan pada subtree kiri.</string>
  <string name="msg_operasi_pembaru">Operasi Pembaruan Nilai</string>
  <string name="msg_mulai_dari_root">Mulai dari root, masukkan node ke antrian.</string>
  <string name="msg_tujuan_traversa">Tujuan Traversal</string>
  <string name="msg_heap_digunakan">Heap digunakan dalam berbagai konteks, termasuk:</string>
  <string name="msg_pohon_binari_da2">Pohon binari dapat diimplementasikan menggunakan struktur data sederhana yang terdiri dari node-node. Setiap node memiliki data dan referensi ke anak kiri dan anak kanannya.</string>
  <string name="msg_penambahan_node">Penambahan Node: Menambahkan node baru ke pohon binari.</string>
  <string name="msg_tempat_di_mana">tempat di mana pengetahuan tentang struktur data menjadi lebih mudah dipahami dan dikuasai.</string>
  <string name="msg_contoh_implemen2">Contoh Implementasi</string>
  <string name="msg_operasi_pada_fe">Operasi Pada Fenwick Tree</string>
  <string name="msg_node_memiliki_d">Node memiliki dua anak. Dalam kasus ini, umumnya digunakan nilai terbesar dari subtree kiri sebagai pengganti.</string>
  <string name="msg_root_node_pali">Root: Node paling atas dalam tree, menjadi awal dari hierarki. </string>
  <string name="lbl_red_black_tree">Red-Black Tree</string>
  <string name="msg_penambahan_ins">Penambahan (Insertion): Menambahkan elemen baru ke heap dan memastikan sifat heap tetap terjaga.</string>
  <string name="msg_dengan_represen">Dengan representasi ini, kita dapat mengimplementasikan operasi-operasi dasar pada pohon binari seperti penambahan, traversal, pencarian, dan penghapusan node.</string>
  <string name="lbl_edge">Edge:</string>
  <string name="msg_fenwick_tree_j">Fenwick Tree, juga dikenal sebagai Binary Indexed Tree (BIT), adalah struktur data yang memungkinkan operasi penjumlahan kumulatif (prefix sum) pada sejumlah elemen array dalam rentang tertentu dengan efisiensi waktu O(log n), di mana n adalah panjang array.</string>
  <string name="msg_fenwicktree_3">FenwickTree[3] += 7&#13;
FenwickTree[4] += 7&#13;
FenwickTree[8] += 7&#13;</string>
  <string name="msg_pada_saat_menam">Pada saat menambahkan node, nilai yang lebih kecil dari node tertentu ditempatkan di subtree kiri, dan nilai yang lebih besar ditempatkan di subtree kanan.</string>
  <string name="msg_node_tersebut_a">Node tersebut adalah daun (tidak memiliki anak).</string>
  <string name="msg_fenwick_tree_b">Fenwick Tree (Binary Indexed Tree)</string>
  <string name="msg_definisi_level">Definisi: Level-order Traversal mengunjungi node pada level yang sama sebelum melanjutkan ke level berikutnya.</string>
  <string name="msg_tree_digunakan">Tree digunakan dalam berbagai algoritma dan pemecahan masalah kompleks.</string>
  <string name="msg_contoh_implemen">Contoh Implementasi Sederhana</string>
  <string name="msg_pemrosesan_hier">Pemrosesan Hierarki: Cocok untuk merepresentasikan struktur hierarki seperti struktur file pada sistem operasi.</string>
  <string name="msg_algoritma_dijks">Algoritma Dijkstra dan Prim: Menggunakan heap untuk memilih dan memperbarui node dengan prioritas tertinggi.</string>
  <string name="msg_membangun_fenwi">Membangun Fenwick Tree: Pembangunan dilakukan dengan melakukan penjumlahan kumulatif pada setiap elemen array ke elemen Fenwick Tree yang sesuai.</string>
  <string name="msg_melakukan_trave">Melakukan traversal pada anak kiri.</string>
  <string name="msg_melakukan_trave2">Melakukan traversal pada anak kanan.</string>
  <string name="lbl_leaf">Leaf:</string>
  <string name="msg_gunakan_antrian">Gunakan antrian (queue) untuk melacak urutan pengunjungan.</string>
  <string name="msg_heap_implement">Heap: Implementasi dan Penggunaan</string>
  <string name="msg_definisi_traver">Definisi Traversal</string>
  <string name="msg_contoh_pengguna">Contoh Penggunaan</string>
  <string name="lbl_get_started">GET STARTED</string>
  <string name="msg_penghapusan_nod4">Penghapusan Node Umum</string>
  <string name="msg_penghapusan_nod5">Penghapusan node melibatkan beberapa skenario, termasuk:</string>
  <string name="msg_penghapusan_nod2">Penghapusan Node</string>
  <string name="msg_penghapusan_nod3">Penghapusan Node pada Tree</string>
  <string name="msg_misalkan_kita_m2">Misalkan kita memiliki array sebagai berikut:</string>
  <string name="msg_misalkan_kita_m">Misalkan kita memiliki pohon binari sebagai berikut:</string>
  <string name="msg_jika_nilai_node">Jika nilai node saat ini sama dengan nilai yang dicari, maka node tersebut ditemukan.</string>
  <string name="msg_dalam_pemilihan">Dalam pemilihan antara AVL dan Red-Black Tree, keputusan bergantung pada kebutuhan aplikasi spesifik. Jika operasi pencarian lebih dominan, AVL Tree mungkin lebih cocok, sementara jika penambahan atau penghapusan sering terjadi, Red-Black Tree dapat memberikan keseimbangan yang memadai dengan kinerja yang lebih baik.</string>
  <string name="msg_penghapusan_nod">Penghapusan Node: Menghapus node tertentu dari pohon binari.</string>
  <string name="msg_avl_tree_adalah">AVL Tree adalah pohon binari pencarian yang memastikan keseimbangan dengan menjaga faktor keseimbangan setiap node, yaitu selisih antara tinggi subtree kanan dan kiri. Jika faktor keseimbangan suatu node di luar rentang -1 hingga 1, rotasi dilakukan untuk memulihkan keseimbangan. Meskipun AVL Tree memberikan keseimbangan yang ketat, operasi seperti penambahan dan penghapusan mungkin lebih lambat dibandingkan Red-Black Tree.</string>
  <string name="msg_struktur_data_p">Struktur Data Pohon Binari</string>
  <string name="msg_struktur_data_t">STRUKTUR DATA TREE</string>
  <string name="msg_perbedaan_utama">Perbedaan utama antara keduanya adalah dalam pendekatan menjaga keseimbangan. AVL Tree memiliki pendekatan yang lebih ketat dengan memantau faktor keseimbangan, sementara Red-Black Tree lebih fleksibel dengan fokus pada jumlah node hitam dalam jalur tertentu. Red-Black Tree sering dipilih dalam implementasi struktur data seperti set dan peta karena dapat memberikan keseimbangan yang baik dengan performa operasional yang baik.</string>
  <string name="msg_red_black_tree">Red-Black Tree juga merupakan pohon binari pencarian yang mempertahankan keseimbangan dengan memperkenalkan atribut warna pada setiap node. Properti utama Red-Black Tree adalah bahwa setiap jalur dari root hingga leaf harus memiliki jumlah node hitam yang sama. Rotasi dan perubahan warna dilakukan saat penambahan atau penghapusan untuk memastikan properti tersebut terpenuhi. Kelebihan Red-Black Tree terletak pada fleksibilitasnya, yang memungkinkan operasi penambahan dan penghapusan lebih cepat daripada AVL Tree.</string>
  <string name="lbl_avl_tree">AVL Tree</string>
  <string name="msg_tree_balance_a">Tree Balance: AVL dan Red-Black Tree</string>
  <string name="lbl_perbandingan">Perbandingan</string>
  <string name="msg_traversal_pohon">Traversal Pohon: Melakukan penelusuran atau visitasi pada setiap node, seperti pre-order, in-order, dan post-order.</string>
  <string name="msg_pohon_binari_da">Pohon binari dapat direpresentasikan secara visual dengan menggunakan grafik yang menunjukkan hubungan hierarki antar node. Contoh representasi visual pohon binari:</string>
  <string name="lbl_quiz">QUIZ</string>
  <string name="msg_konsep_pohon_bi">Konsep Pohon Binari</string>
  <string name="msg_pencarian_node">Pencarian Node: Mencari keberadaan suatu node dalam pohon binari.</string>
</resources>